--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/style.css">
     <title>Is your birthday palindrome ? </title>
 </head>
+
 <body>
     <h1>Palindrome Birthday</h1>
-    <input type="date" id="bday-input"/>
+    <input type="date" id="bday-input" />
     <button id="show-btn">show</button>
     <p id="output"></p>
     <script src="/main.js"></script>
 </body>
+
 </html>
